# shove

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.MD  fly.toml
.github/workflows/: checktestlint.yml  fly-deploy.yml
serve/: main.rs  service.rs  state.rs
src/: aws.rs  cache_control.rs  lib.rs  main.rs  non_empty_list.rs  protect.rs  s3.rs  serve.rs  upload.rs
src/cache_control/: manager.rs
src/protect/: auth.rs  auth_storer.rs
src/serve/: livereload.rs  pages.rs  service.rs  state.rs
src/upload/: machinery.rs
upload/: main.rs  upload.rs
