[package]
name = "shove"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2 = "0.10.6"
color-eyre = "0.6.3"
dialoguer = "0.11.0"
dotenvy = "0.15.7"
futures = "0.3.31"
hmac = "0.12.1"
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
mime = "0.3.17"
moka = { version = "0.12.8", features = ["future"] }
new_mime_guess = "4.0.4"
rust-s3 = "0.35.1"
sentry = { version = "0.34.0", features = ["tracing"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
soketto = { version = "0.8.0", features = ["http"] }
sha2 = "0.10.8"
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.5.0"
