[package]
name = "shove"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
dotenvy = "0.15.7"
futures = "0.3.31"
http-body-util = "0.1.2"
hyper = { version = "1.5.0", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
mime = "0.3.17"
moka = { version = "0.12.8", features = ["future"] }
new_mime_guess = "4.0.4"
rust-s3 = "0.35.1"
sentry = { version = "0.34.0", features = ["tracing"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
soketto = { version = "0.8.0", features = ["http"] }
tokio = { version = "1.41.1", features = ["full"] }
tokio-util = { version = "0.7.12", features = ["compat"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
walkdir = "2.5.0"
getrandom = "0.2.15"
base64 = "0.22.1"
path-clean = "1.0.1"
comfy-table = "7.1.3"
argon2 = { version = "0.5.3", features = ["std"] }
aes-gcm = { version = "0.10.3", features = ["std"] }
sha2 = "0.10.8"
hkdf = { version = "0.12.4", features = ["std"] }
